tests/error/decl_res.gw
// [skip]  in variable declaration
int now;
